Fixed switch button on Safari

--- a/src/styles/components/AttendeesSettings.less
+++ b/src/styles/components/AttendeesSettings.less
@@ -200,7 +200,7 @@
           input {
             opacity: 0;
             position: relative;
-            display: inherit;
+            display: flex;
           }
           label {
             position: relative;
